<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/editCateg"

        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/editCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editschet"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/editschet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993" />

    <Button
        android:id="@+id/editPrihod"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="276dp"
        android:text="@string/editpihot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/balance"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="210dp"
        android:text="Начальный баланс"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrihod" />

</androidx.constraintlayout.widget.ConstraintLayout>